--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,16 @@
-.audio-wrapper {
-  width: 200px;
-  height: 200px;
-  overflow: hidden;
+:host {
   font-family: Arial, Helvetica, sans-serif;
   text-transform: uppercase;
   font-weight: bold;
   font-size:12px;
+  position: relative;
+  display: block;
+}
+.audio-wrapper {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
   padding:20%;
   background: radial-gradient(darken(cyan, 3), darken(cyan, 45)) no-repeat;
   &.muted {
@@ -15,4 +20,10 @@
  p {
     text-align: center;
     color: #fff;
+}
+.program-info {
+  position: absolute;
+  bottom: 0;
+  left:0;
+  right:0;
 }
