--- a/src/app/partials/time/time.component.scss
+++ b/src/app/partials/time/time.component.scss
@@ -1,6 +1,6 @@
 :host {
   text-align: center;
- // position: absolute;
+  //position: absolute;
   bottom: 22px;
   left: 0;
   right: 0;
@@ -8,6 +8,7 @@
   color: #cecece;
   .time-now {
       font-size: 1.4em;
-      color: #fff
+      color: #fff;
+      padding: 0 18px;
   }
 }
