--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,7 +11,7 @@
   width: 200px;
   height: 200px;
   overflow: hidden;
-  padding:20%;
+  padding:80px;
   background: radial-gradient(darken(cyan, 3), darken(cyan, 45)) no-repeat;
   &.muted {
       background: radial-gradient(darken(pink, 10), darken(pink, 80)) no-repeat;
