--- a/src/app/partials/expression-menu/expression-menu.component.html
+++ b/src/app/partials/expression-menu/expression-menu.component.html
@@ -1,3 +1,3 @@
-<a (click)="express('lol')">😂</a>
-<a (click)="express('explode')">🤯</a>
-<a (click)="express('turd')">💩</a>
+<a (click)="express('lol', $event)">😂</a>
+<a (click)="express('explode', $event)">🤯</a>
+<a (click)="express('fart', $event)">💩</a>
