--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,14 +4,15 @@
   font-weight: bold;
   font-size:12px;
   position: relative;
-  display: block;
+  display: flex;
+  flex-direction: row;
 }
 .audio-wrapper {
   position: relative;
-  width: 200px;
-  height: 200px;
+  width: 360px;
+  height: 450px;
   overflow: hidden;
-  padding:80px;
+  //padding:80px;
   background: radial-gradient(darken(cyan, 3), darken(cyan, 45)) no-repeat;
   &.muted {
       background: radial-gradient(darken(pink, 10), darken(pink, 80)) no-repeat;
