--- a/src/app/partials/expression-menu/expression-menu.component.html
+++ b/src/app/partials/expression-menu/expression-menu.component.html
@@ -1,3 +1,4 @@
-<a (click)="express('lol', $event)">😂</a>
-<a (click)="express('explode', $event)">🤯</a>
-<a (click)="express('fart', $event)">💩</a>
+<a (click)="express($event)">😂</a>
+<a (click)="express($event)">🤯</a>
+<a (click)="express($event)">💩</a>
+<a (click)="express($event)">🏎</a>
