--- a/src/app/partials/time/time.component.html
+++ b/src/app/partials/time/time.component.html
@@ -1,5 +1,5 @@
 <div class="time-controller">
-    <span class="time-start">{{start | date:'hh:mm:ss'}}</span>
+    <span class="time-start">{{start | timeAgo}}</span>
     <span class="time-now">{{now | date:'hh:mm:ss'}}</span>
-    <span class="time-end">{{end | date:'hh:mm:ss'}}</span>
+    <span class="time-end">{{end | timeAgo}}</span>
 </div>
