--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,3 +28,13 @@
   left:0;
   right:0;
 }
+
+.login-box {
+  width: 100vw;
+  height: 98vh;
+  background: darkcyan;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
