--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,24 @@
 
 <div *ngIf="auth.user | async as user; else showLogin">
-
+  <div class="wrap">
     <div class="audio-wrapper" [class.muted]="audio.isMuted">
       <app-expression-menu></app-expression-menu>
 
       <app-logo (click)="toggleRadio()"></app-logo>
       <app-program-info *ngIf="programInfo | async as info" [info]="info"></app-program-info>
     </div>
+    <app-expression-list></app-expression-list>
+  </div>
     <button (click)="auth.logout()">Logout</button>
 
-    <app-logged-in-users></app-logged-in-users>
+    <!--app-logged-in-users></app-logged-in-users-->
 
-    <pre style="text-transform: initial">
+  <!--  <pre style="text-transform: initial">
   {{ user | json }}
 
 </pre>
-<app-expression-list></app-expression-list>
+-->
+
 </div>
 
 
